welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var vuBiscuit : Boolean = false
	if (estSurBiscuit==true) {vuBiscuit=True}
	else {
		for (x<-1 to 6){
			avance();
			if (estSurBiscuit) {vuBiscuit=True};
		};
		for (x<-1 to 6) {
			recule();
		};
	};
	vuBiscuit
}
